[package]
name = "meta-strike"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
base64 = "0.22"
futures = "0.3"
http = "1.2"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50", features = ["macros", "rt", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls", "url"] }
tungstenite = "0.28"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
